<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EmojiGame</string>
    <string name="login">Connexion</string>
    <string name="facebook_application_id" translatable="false">205811963639659</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb205811963639659</string>
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="main_activity_points_text">0</string>
    <string name="main_activity_username_text">Username</string>
    <string name="main_activity_play_button_text">JOUER</string>
    <string name="main_activity_create_button_text">CREER</string>
    <string name="profile_activity_username_hint">Username</string>
    <string name="profile_activity_number_enigma_created_text">Enigmes créées</string>
    <string name="profile_activity_number_enigma_solved_text">Enigmes résolues</string>
    <string name="profile_activity_user_picture_image_content_description">user picture</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>
    <string name="toolbar_title_profile_activity">Votre Profil</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="solve_activity_enigma_response_title">La solution : </string>
    <string name="solve_activity_enigma_solved_first_place">Vous êtes le premier à résoudre cette énigme, vous remportez </string>
    <string name="solve_activity_enigma_solved_second_place">Vous êtes le second à résoudre cette énigme, vous remportez </string>
    <string name="solve_activity_enigma_solved_third_place">Vous êtes le troisième à résoudre cette énigme, vous remportez </string>
    <string name="solve_activity_enigma_solved_fourth_place">Vous avez résolu l\'énigme, vous remportez </string>
    <string name="solve_activity_toast_wrong_answer">Désolé mais cette réponse n\'est pas exacte !! </string>
    <string name="solve_activity_toast_no_answer">Merci d\'entrer une réponse !!</string>
    <string name="enigma_already_solved">Vous avez déjà répondu à cette énigme</string>
    <string name="solve_activity_category_title">Catégorie</string>
    <string name="solve_activity_create_by_title">Créé par :</string>
    <string name="solve_activity_number_enigma_solved_title">Enigme rapporte :</string>
    <string name="solve_activity_your_answer_title_text">Votre réponse :</string>
    <string name="solve_activity_answer_hint">Entrer votre réponse ici</string>
    <string name="solve_activity_already_solved_answer_title_text">Réponse</string>
    <string name="solve_activity_send_button">ENVOYER</string>
    <string name="solve_activity_edit_button_text">MODIFIER</string>
    <string name="solve_activity_podium_no_solve_text">Persone n\'a résolu cet énigme pour l\'instant !   A vous de jouer …</string>
    <string name="solve_activity_podium_number_enigma_solved">Cette énigme a été résolue :</string>
    <string name="solve_activity_podium_first_place_text">Première place :</string>
    <string name="solve_activity_podium_second_place_text">Seconde place :</string>
    <string name="solve_activity_nothing_text">_</string>
    <string name="solve_activity_podium_third_place_text">Troisième place :</string>
    <string name="no_enigma_filter">Il n\'y a pour le moment aucune énigme correspondante</string>
    <string name="no_enigma_already_played">Retrouvez ici les énigmes déjà jouées. Il n\'y a pour le moment aucune énigme</string>
    <string name="no_enigma_created">Retrouvez ici les énigmes que vous avez créées. Il n\'y a pour le moment aucune énigme</string>
    <string name="button_update_photo">Mettre à jour la photo</string>
    <string name="toolbar_title_create_enigma_activity">Créer une Enigme</string>
    <string name="create_button">CREER</string>
    <string name="tv_category_choosed">Choisissez une catégorie</string>
    <string name="login_text_game">Bienvenue \nVenez défier vos amis dans ce jeu de rébus d\'un nouveau genre</string>
    <string name="login_text_connexion">Pour commencer à vous amuser, connectez vous : </string>
    <string name="create_activity_update_button">MODIFIER</string>
    <string name="enigma_hint">CREER VOTRE ENIGME ICI \n sous forme d\'EMOJIS</string>
    <string name="create_activity_solution_title_text">Solution :</string>
    <string name="create_activity_solution_hint">Entrez ici la solution</string>
    <string name="create_activity_category_title_text">Category :</string>
    <string name="create_activity_other_title_text">Autre :</string>
    <string name="create_activity_other_detail_hint">Précisez votre catégorie</string>
    <string name="create_activity_explanation_title_text">Explication :</string>
    <string name="create_activity_explanation_hint">Expliquez chaque partie et séparez les avec un \"\_\".</string>
    <string name="toast_new_enigma_creation_short">Nouvelle énigme enregistrée!</string>
    <string name="toast_cancel_enigma_creation">Enigme non sauvegardée !</string>
    <string name="toast_cancel_enigma_updated">Enigme mise à jour !</string>
    <string name="toast_missing_enigma_info">"Veuillez remplir tous les champs !!"</string>
    <string name="toast_too_long_enigma_solution">"Désolé mais la solution de l'énigme ne doit pas dépasser 45 caractères"</string>
    <string name="toast_wrong_explanation">"Veuillez expliquer votre énigme en décrivant chaque partie séparé par un \"_\" svp !"</string>
    <string name="toast_no_more_life">"Vous n\'avez plus de vie !!"</string>
    <string name="toast_hint_one_mandatory">"Vous devez activer le coup de pouce \" Nombre de lettre\" avant de pouvoir obtenir une lettre coup de pouce"</string>
    <string name="snackbar_message_no_enough_coins">Vous n\'avez pas assez d\'EmojiCoins pour acheter une vie !!</string>
    <string name="snackbar_message_life_at_maximum">Vous avez atteint le nombre maximum de vie !!</string>
    <string name="snackbar_message_win_new_life">Félicitations, vous gagnez une vie supplémentaire !!</string>
    <string name="snackbar_message_win_new_coins">Félicitations, vous remportez 50 EmojiCoins !!</string>
    <string name="snackbar_message_activate_hint_one">Félicitations, vous avez débloqué le Coup de pouce : \n Nombre de Lettres</string>
    <string name="snackbar_message_activate_hint_two">Félicitations, vous avez activez le coup de pouce : \n Obtenir une Lettre</string>
    <string name="fragment_dialog_emoji_coins_create_enigma_text">Créez une énigme</string>
    <string name="fragment_dialog_emoji_coins_watch_ads_text">Regardez une vidéo</string>
    <string name="fragment_dialog_emoji_life_new_life_timer_text">Prochaine vie dans :</string>
    <string name="fragment_dialog_emoji_life_timer_example">00:00:00</string>
    <string name="fragment_dialog_emoji_life_title_content_text">Envie de jouer plus longtemps ?</string>
    <string name="fragment_dialog_emoji_life_get_more_life_text">Obtenir une vie supplémentaire :</string>
    <string name="fragment_dialog_emoji_life_max_life_reached">Vous avez atteint le nombre de vie maximum !!</string>
    <string name="fragment_dialog_solve_time_word">fois</string>
    <string name="fragment_dialog_emoji_life_bar">_</string>
    <string name="fragment_dialog_enigma_created_text">Nouvelle énigme enregistrée, bravo, vous gagnez 50 points !</string>
    <string name="fragment_dialog_emoji_coins_get_coins_text">Pour obtenir des EmojiCoins :</string>
    <string name="dialog_hint_one_second_title">Coup de pouce 1 :</string>
    <string name="dialog_hint_two_second_title">Coup de pouce 2 :</string>
    <string name="dialog_hint_one_text">Regardez une vidéo pour obtenir le nombre de lettres de l\'énigme</string>
    <string name="dialog_hint_two_text">Regardez une vidéo pour faire apparaître une lettre de l\'énigme</string>
    <string name="fragment_dialog_solve_activity_solved_tv_congratulation">Réponse correcte, félicitations !!</string>
    <string name="fragment_dialog_emoji_coins_text_view_question_text">Besoin de plus d\'EmojiCoins ?</string>
    <string name="hint_two_no_more_hint_text" tools:ignore="TypographyFractions">Vous avez atteint le nombre maximum de lettres pour ce coup de pouce \n (1/2 du nombre total)</string>
    <string name="fragment_dialog_updated_username_title">Comment voulez-vous que l\'on vous appelle ?</string>
    <string name="validate">Valider</string>
    <string name="fragment_dialog_emoji_lifes_new_life_ok">Félicitations, vous avez obtenu une vie supplémentaire</string>
    <string name="fragment_dialog_hint_one_mandatory_text_one">Vous devez activer le coup de pouce : Nombre de Lettre :</string>
    <string name="fragment_dialog_hint_one_mandatory_text_two">avant de pouvoir utiliser le coup de pouce : Obtenir une lettre</string>
    <string name="download_text">Chargement …</string>
    <string name="download_lower_case_text">chargement …</string>
    <string name="enigma_item_enigma_text">ENIGMA</string>
    <string name="enigma_item_category_title">Catégorie :</string>
    <string name="enigma_item_enigma_solved_title_text">Enigme rapporte :</string>
    <string name="enigma_item_create_by_title_text">Créée par :</string>
    <string name="popup_help_example_title">EXEMPLE</string>
    <string name="popup_help_enigma_help">Entrez ici votre énigme sous forme d\'émoji !!   Attention chaque syllabe doit être représentée !</string>
    <string name="popup_help_solution_title">Solution :</string>
    <string name="popup_help_solution_text">Cannibale</string>
    <string name="popup_help_solution_help">Inscrire ici la réponse.</string>
    <string name="popup_help_solution_second_help">Attention à votre orthographe !!!</string>
    <string name="popup_help_category_title">Catégorie :</string>
    <string name="popup_help_category_help">Utilisez la liste déroulante pour choisir la catégorie de votre énigme.</string>
    <string name="popup_help_explanation_title">Explication :</string>
    <string name="popup_help_explanation_text">K_Nid_Balle</string>
    <string name="popup_help_explanation_help">Entrez ici la signification de chaque Emoji séparée par un _</string>
    <string name="ok">OK</string>
    <string name="enigma_menu_all">Toutes</string>
    <string name="enigma_menu_new">Nouvelles</string>
    <string name="enigma_menu_on_going">En cours</string>
    <string name="enigma_menu_resolved">Résolues</string>
    <string name="category_menu_all">Toutes</string>
    <string name="category_menu_personage">Personnage</string>
    <string name="category_menu_cinema">Cinéma</string>
    <string name="category_menu_music">Musique</string>
    <string name="category_menu_expressions">Expressions</string>
    <string name="category_menu_object">Objet</string>
    <string name="category_menu_word">Nom Commun</string>
    <string name="category_menu_others">Autres</string>
    <string name="image_example_content_description">Image Example</string>
</resources>