<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/category_all"
        android:title="@string/category_menu_all"
        android:checkable="true"/>
    <item android:id="@+id/category_personnage"
        android:title="@string/category_menu_personage"
        android:checkable="true"/>
    <item android:id="@+id/category_cinéma"
        android:title="@string/category_menu_cinema"
        android:checkable="true"/>
    <item android:id="@+id/category_musique"
        android:title="@string/category_menu_music"
        android:checkable="true"/>
    <item android:id="@+id/category_expressions"
        android:title="@string/category_menu_expressions"
        android:checkable="true"/>
    <item android:id="@+id/category_objet"
        android:title="@string/category_menu_object"
        android:checkable="true"/>
    <item android:id="@+id/category_mot"
        android:title="@string/category_menu_word"
        android:checkable="true"/>
    <item android:id="@+id/category_autres"
        android:title="@string/category_menu_others"
        android:checkable="true"/>
</menu>