<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/help_explanation_activity_rl_global"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nioto.emojigame.activities.CreateEnigmaActivity"
    android:background="@color/primaryDarkColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primaryColor"
            android:text="@string/popup_help_example_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:padding="@dimen/default_margin"/>
        <Button
            android:id="@+id/help_explanation_popup_close"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="top|end"
            android:background="@drawable/close"
            android:layout_margin="@dimen/default_margin"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <!-- ENIGMA LAYOUT  -->
    <RelativeLayout
        android:id="@+id/activity_help_enigma_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/primaryDarkColor">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/create_activity_image_enigma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/example"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_activity_et_enigma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </RelativeLayout>
    <!-- Text Inputs Layout  -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/primaryDarkColor">
        <!-- SOLUTION LAYOUT  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/help_popup_tv_title_solution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/popup_help_solution_title"
                android:textColor="@color/secondaryTextColor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/help_popup_et_solution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/help_popup_tv_title_solution"
                android:text="@string/popup_help_solution_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/secondaryTextColor"
                android:textColor="@color/secondaryTextColor"/>
            <TextView
                android:id="@+id/help_popup_et_solution_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/help_popup_et_solution"
                android:text="@string/popup_help_solution_help"
                android:textColor="@color/primaryTextColor"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/popup_help_solution_second_help"
                android:textColor="@color/primaryTextColor"/>
        </RelativeLayout>
        <!-- CATEGORY LAYOUT  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/help_popup_tv_title_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/popup_help_category_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondaryTextColor" />
            <TextView
                android:id="@+id/help_popup_tv_category_choosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/popup_help_category_help"
                android:textColor="@color/primaryTextColor"
                android:layout_toEndOf="@+id/help_popup_tv_title_category"/>
        </RelativeLayout>

        <!-- MESSAGE LAYOUT  -->
        <RelativeLayout
            android:id="@+id/help_popup_rl_mess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/help_popup_tv_title_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/popup_help_explanation_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondaryTextColor"
                />
            <TextView
                android:id="@+id/help_popup_et_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/help_popup_tv_title_message"
                android:text ="@string/popup_help_explanation_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondaryTextColor"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/help_popup_message_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/default_large_margin"
                android:paddingEnd="@dimen/default_large_margin"
                android:padding="@dimen/default_margin"
                android:text="@string/popup_help_explanation_help"
                android:textColor="@color/primaryTextColor"/>
        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>