<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:id="@+id/fragment_dialog_hint_one_mandatory_linear_layout_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_fragment_dialog"
        android:orientation="vertical"
        android:padding="@dimen/default_large_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_dialog_hint_one_mandatory_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_small_margin"
            android:layout_marginStart="@dimen/default_small_margin"
            android:layout_marginEnd="@dimen/default_small_margin"
            android:text="@string/fragment_dialog_hint_one_mandatory_text_one"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryTextColor" />
    <ImageView
        android:id="@+id/fragment_dialog_hint_one_mandatory_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_dialog_hint_one_mandatory_text_one"
        android:src="@drawable/hint_one"/>
    <TextView
        android:id="@+id/fragment_dialog_hint_one_mandatory_text_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_small_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_small_margin"
        android:layout_marginEnd="@dimen/default_small_margin"
        android:layout_below="@+id/fragment_dialog_hint_one_mandatory_image_button"
        android:text="@string/fragment_dialog_hint_one_mandatory_text_two"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/thirdTextColor"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </RelativeLayout>

    <Button
        android:id="@+id/fragment_dialog_hint_one_mandatory_button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_fragment_dialog"
        android:text="@string/ok"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_hint_one_mandatory_linear_layout_content" />
</android.support.constraint.ConstraintLayout>